Fix z-index of dialog box

--- a/public/stylesheets/raw/styles.css
+++ b/public/stylesheets/raw/styles.css
@@ -338,7 +338,7 @@ input.ui-button{padding:.4em 1em;}
 .ui-button-text-icons .ui-button-icon-secondary, .ui-button-icons-only .ui-button-icon-secondary{right:.5em;}
 .ui-buttonset{margin-right:7px;}
 .ui-buttonset .ui-button{margin-left:0;margin-right:-.3em;}
-.ui-dialog{position:absolute;padding:.2em;width:300px;overflow:hidden;z-index:10;}
+.ui-dialog{position:absolute;padding:.2em;width:300px;overflow:hidden;z-index:1000;}
 .ui-dialog .ui-dialog-titlebar{padding:0.4em;position:relative;}
 .ui-dialog .ui-dialog-title{float:left;margin:0px;}
 .ui-dialog .ui-dialog-content{position:relative;border:0;padding:.5em;background:none;overflow:auto;}
